@@ -355,6 +355,7 @@ JK131- FpXQ_minpoly/Flxq_minpoly: use Shoup algorithm (much faster), and do
        not assume modulus is irreducible
 BA132- [libpari] idealramfrobenius, idealfrobenius_aut, nfgaloispermtobasis
   133- Allow ??lfun, ??Lmath, etc. [#1753]
+  134- [libpari] cyc_normalize, char_normalize
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
